2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Redesign the way that threads are handled to try to improve reliability when things go wrong, especially with C++11.
 Change the output streaming for `fostlib::string` to use the underlying platform implementation.
 Try to set BOOST_SPIRIT_THREADSAFE to see if this makes a difference to thread problems associated with Boost Spirit.

2014-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Fix a bug in the stdout logger sink which caused it to crash the logging when a log level was set.
 Add C++11 move constructors to `fostlib::detail::log_object` (used for creation of log messages).
 Extend the build system to support an optional requirements.jam that can be used to inject project requirements across all projects in a build.

2014-05-19  Kirit Saelensminde  <kirit@felspar.com>
 Change the way that `boost::filesystem::wpath` instances are converted from strings in order to fix a Boost bug on Android.

2014-05-16  Kirit Saelensminde  <kirit@felspar.com>
 Add in a JSON setting store, `fostlib::settings`. Add `-j` default command line switch so that it can be used rather than an INI file.

2014-05-09  Kirit Saelensminde  <kirit@felspar.com>
 Use Boost UUID library starting with version 1.42.
 Fix a bug where bounds checking cause a build failure on platforms with unsigned char.

2014-03-21  Kirit Saelensminde  <kirit@felspar.com>
 Coercion from larger to smaller ints requires different implementations for signed and unsigned types. Silences a warning about a comparison always being true when an unsigned value is compared with zero.
 Fixed another gcc warning for later versions of Boost about unused typedefs.

2014-02-28  Kirit Saelensminde  <kirit@felspar.com>
 Allow dates to have days added and subtracted from them.
 Add `today` member to `fostlib::date`.

2014-02-27  Kirit Saelensminde  <kirit@felspar.com>
 Added a new `split` member to jcursor to allow one to be created by splitting up a single string.
